# tauri_lib

./: README.md
.github/workflows/: build.yaml
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  Cross.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
gopoc/: .gitignore  README.md  go.mod  gopoc.go
gopoc/include/: vpnym.h
runner/: Cargo.toml  Cross.toml
runner/src/: main.rs
