[package]
name = "vpnym"
version = "0.1.0"
description = "Nym VPN app lib"
authors = ["pierre@nymtech.net"]
license = ""
repository = ""
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
